# EDR09

./: .dockerignore  .env.example  .gitignore  FIXES_APPLIED.md  QUICK_START.md  README.md  docker-compose.yml  main.py  setup.bat  setup.sh  test_api.py  test_api_auth.py  test_edr_comprehensive.py  test_external_cmd_monitoring.py  test_external_ip_blocking.py  test_quick_check.py  test_realtime_monitor.py  test_windows_collectors.py
backend/: .dockerignore  Dockerfile  README.md  __init__.py  app.py  main.py  pyproject.toml  render.yaml  requirements.txt
backend/config/: rules.json  settings.json
backend/dashboard/: index.html  login.html  signup.html
backend/dashboard/static/: app.js  auth.js  styles.css
backend/edr/: __init__.py  auth.py  logging.py  main.py  models.py  service.py
backend/edr/agent/: __init__.py  collectors.py  config.py  demo_data.py  service.py  windows_collectors.py
backend/edr/api/: app.py
backend/edr/config/: settings.py
backend/edr/correlation/: aggregator.py
backend/edr/database/: storage.py
backend/edr/detection/: engine.py  rules.py
backend/edr/pipeline/: dispatcher.py  normalizer.py  queue_manager.py
backend/edr/response/: engine.py  firewall.py
backend/tests/: test_auth.py  test_edr_flow.py
docs/: CMD_DETECTION_AND_IP_BLOCKING_ARCHITECTURE.md  COMPLETE_SETUP_AND_RUN_GUIDE.md  CONFIGURATION.md  CONTRIBUTING.md  DASHBOARD_FILES_SUMMARY.md  DASHBOARD_QUICKSTART.md  DEMO_CHECKLIST.md  DEMO_GUIDE.md  DEPLOYMENT.md  EDR_CORRELATION_REFERENCE.md  IMPLEMENTATION_SUMMARY.md  POWERPOINT_PRESENTATION_PROMPT.md  QUICKREF.md  (+7 more)
(+17 files in other folders)
